[package]
name = "winutil"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
anyhow = "1.0.40"
winapi = { version = "0.3.9", features = ["std", "memoryapi", "processthreadsapi", "tlhelp32", "ntdef", "handleapi", "windef", "winuser", "dxgi", "dxgitype", "dwmapi", "uxtheme", "synchapi", "wow64apiset", "wingdi"] }
ntapi = "0.3.6"
lazy_static = "1.4.0"
enigo = "0.0.14"
