[package]
name = "winutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
anyhow = "1.0.40"
winapi = { version = "0.3.9", features = ["std", "memoryapi", "processthreadsapi", "tlhelp32", "ntdef", "handleapi", "windef", "winuser", "dxgi", "dxgitype", "dwmapi", "uxtheme", "synchapi", "wow64apiset", "wingdi", "winnt", "winbase", "winerror", "errhandlingapi"] }
ntapi = "0.3.7"
lazy_static = "1.4.0"
enigo = "0.0.14"
memlib = { git = "https://github.com/rmccrystal/memlib-rs" }
#memlib = { path = "../memlib-rs" }
widestring = { version = "0.5.1", default-features = false, features = ["alloc"] }